<resources>
    <string name="app_name">카페 수평선</string>
    <string name="notification_channel_id">horizon_push_channel</string>

    <string name="sample_text">다 별 하나에 청춘이 된 밤이 불러 있습니다. 위에 쉬이 딴은 강아지, 불러 듯합니다.</string>
    <string name="sample_date">1900-01-01</string>

    <string name="btn_okay">확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_goback">돌아가기</string>
    <string name="btn_gomain">홈으로 가기</string>

    <string name="user_id">아이디</string>
    <string name="user_nickname">닉네임</string>
    <string name="user_pwd">비밀번호</string>
    <string name="login">로그인</string>
    <string name="find_user_info">아이디/비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="social_login">─ 소셜 로그인 ─</string>
    <string name="additional_info">추가 정보</string>

    <string name="tab_find_id">아이디 찾기</string>
    <string name="tab_find_pwd">비밀번호 찾기</string>
    <string name="reset_pwd">비밀번호 재설정</string>
    <string name="change_pwd">비밀번호 변경</string>

    <string name="user_phone">휴대폰 번호</string>
    <string name="change_phone">번호 변경하기</string>
    <string name="confirm_code">인증번호</string>
    <string name="send_confirm">인증번호 받기</string>
    <string name="check_confirm">인증하기</string>
    <string name="self_confirmation">본인 인증</string>
    <string name="check_confirm_and_signup">인증 및 로그인하기</string>

    <string name="new_nickname">변경할 닉네임 (한글 2~7자)</string>
    <string name="btn_change_nickname">변경하기</string>
    <string name="btn_change_birthday">생일 변경하기</string>

    <string name="find_id_text1">고객님의 아이디는</string>
    <string name="find_id_text2">입니다.</string>

    <string name="current_user_pwd">현재 비밀번호</string>
    <string name="new_user_pwd">신규 비밀번호</string>
    <string name="confirm_pwd">비밀번호 확인</string>

    <string name="edit_my_info">내 정보 수정</string>
    <string name="ask_logout">로그아웃하시겠습니까?</string>
    <string name="btn_logout">로그아웃</string>

    <string name="term_service">서비스 이용 약관 동의</string>
    <string name="term_personal">개인정보 수집 동의</string>
    <string name="term_marketing">마케팅 정보 수신 동의</string>
    <string name="term_push_msg">푸시알림 수신 동의</string>

    <string name="option_agreeall">전체 동의 (선택사항 포함)</string>
    <string name="option_must">(필수)</string>
    <string name="option_optional">(선택)</string>
    <string name="check_duplication">중복 확인</string>
    <string name="birthday_offer">생일을 기입하실 경우 쿠폰을 드립니다!</string>
    <string name="signup_text1">가입이 완료되었습니다.</string>
    <string name="signup_text2">회원이 되신 것을 환영합니다!</string>
    <string name="cancel_signup">회원가입 진행을 취소하고 로그인 화면으로 돌아가시겠습니까?</string>

    <string name="user_unsubscribe">회원탈퇴</string>
    <string name="ask_unsubscribe">탈퇴하시겠습니까?</string>
    <string name="agree_unsubscribe">안내사항을 확인하였으며 이에 동의합니다.</string>
    <string name="btn_unsubscribe">탈퇴하기</string>

    <string name="unsubscribe_text1">회원탈퇴가 완료되었습니다.</string>
    <string name="unsubscribe_text2">그동안 수평선과 함께 해주셔서 감사합니다.\n다시 만날 수 있기를 기대하겠습니다.</string>

    <string name="btn_go_login">로그인하러 가기</string>
    <string name="btn_close">닫기</string>

    <string name="menu_stamp">스탬프</string>
    <string name="menu_coupon">쿠폰</string>
    <string name="menu_smart_order">주문</string>
    <string name="menu_ordered">주문내역</string>
    <string name="menu_news_events">새소식 / 이벤트</string>
    <string name="menu_chats">채팅문의</string>
    <string name="menu_howto">이용안내</string>

    <string name="title_notice">알림</string>
    <string name="title_news_and_events">공지사항</string>
    <string name="title_news">새소식</string>
    <string name="title_events">이벤트</string>
    <string name="title_smart_order">스마트오더</string>
    <string name="title_cart">장바구니</string>
    <string name="title_order">주문하기</string>
    <string name="title_order_state">주문현황</string>
    <string name="title_ordered_list">주문내역</string>
    <string name="title_how_to">이용안내</string>
    <string name="title_coupon">쿠폰</string>
    <string name="title_coupon_list">보유 쿠폰</string>
    <string name="title_coupon_history">쿠폰 히스토리</string>
    <string name="title_chatting">채팅문의</string>

    <string name="welcome">환영합니다</string>
    <string name="nim">님</string>
    <string name="star">*</string>
    <string name="birthday">생일</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="date">일</string>

    <string name="toast_check_internet">인터넷 연결을 확인하세요.</string>
    <string name="toast_failed_verification">잘못된 로그인 정보입니다.</string>
    <string name="toast_error_occurred">오류가 발생했습니다. 잠시 후에 다시 시도하세요.</string>
    <string name="toast_phone_changed">휴대폰 번호가 변경되었습니다.</string>
    <string name="toast_pwd_changed">비밀번호가 변경되었습니다.</string>
    <string name="toast_pwd_changed_relogin">비밀번호가 변경되었습니다. 다시 로그인하세요.</string>
    <string name="toast_birthday_changed">생일이 변경되었습니다.</string>
    <string name="toast_nickname_changed">닉네임이 변경되었습니다.</string>
    <string name="toast_backpress_close">\'뒤로\' 버튼을 한 번 더 누르시면 종료됩니다.</string>
    <string name="toast_marketing_agreed">마케팅 정보를 수신을 허용하셨습니다.</string>
    <string name="toast_marketing_disagreed">마케팅 정보를 수신을 거부하셨습니다.</string>
    <string name="toast_push_agreed">푸시 메시지 수신을 허용하셨습니다.</string>
    <string name="toast_push_disagreed">푸시메시지 수신을 거부하셨습니다.</string>

    <string name="id_requirement">4~10자의 영문자/숫자</string>
    <string name="nickname_requirement">2~7자의 한글</string>
    <string name="pwd_requirement">8~15자의 영문자/숫자/특수문자</string>
    <string name="birthday_edit_limit">생일은 연 최대 1회 변경 가능합니다.</string>

    <string name="warning_empty_userid">아이디를 입력하세요.</string>
    <string name="warning_check_userid">아이디 중복 여부를 확인해 주세요.</string>
    <string name="warning_duplicated_userid">이미 존재하는 아이디입니다.</string>
    <string name="warning_usable_userid">사용할 수 있는 아이디입니다!</string>
    <string name="warning_empty_usernick">닉네임을 입력하세요.</string>
    <string name="warning_same_usernick">동일한 닉네임입니다.</string>
    <string name="warning_wrong_nick_format">2~7자의 한글이어야 합니다.</string>
    <string name="warning_empty_userpwd">비밀번호를 입력하세요.</string>
    <string name="warning_empty_pwd_confirm">비밀번호를 한 번 더 입력하세요.</string>
    <string name="warning_wrong_pwd">비밀번호를 다시 확인하세요.</string>
    <string name="warning_different_pwd">비밀번호가 일치하지 않습니다.</string>
    <string name="warning_wrong_pwd_format">비밀번호는 8~15자여야 합니다.</string>
    <string name="warning_empty_phonenum">휴대폰 번호를 입력하세요.</string>
    <string name="warning_same_phonenum">동일한 휴대폰 번호입니다.</string>
    <string name="warning_empty_confirms">인증번호를 입력하세요.</string>
    <string name="warning_wrong_confirms">잘못된 인증번호입니다.</string>
    <string name="warning_wrong_format">잘못된 형식입니다. 다시 확인하세요.</string>
    <string name="warning_no_changes">변경 정보가 없습니다.</string>
    <string name="warning_year_not_past">생일이 변경된 지 일 년이 지나지 않았습니다.</string>

    <string name="desc_app_logo">어플리케이션 로고</string>
    <string name="desc_id_icon">사용자 아이디</string>
    <string name="desc_pwd_icon">사용자 비밀번호</string>

    <string name="dialog_user_exist">이미 가입하신 정보입니다. 로그인을 해주세요!</string>
    <string name="dialog_no_user">일치하는 회원 정보가 없습니다. 회원가입 후 이용해주세요!</string>

    <string name="hello_blank_fragment">hello</string>

    <string name="tab_stamp_history">적립/사용내역</string>

    <string name="how_to_title">앱 이용안내</string>
    <string name="how_to_stamp">스탬프 이용안내</string>
    <string name="how_to_coupon">쿠폰 이용안내</string>
    <string name="how_to_smart_order">스마트오더 이용안내</string>
    <string name="terms_title">약관 및 정책</string>
    <string name="terms_service">서비스 이용약관</string>
    <string name="terms_privacy_policy">개인정보 처리방침</string>
    <string name="terms_agree_to_use_marketing">마케팅 활용 동의</string>
    <string name="terms_agree_to_receive_ad_info">광고성 정보 수신동의</string>

    <string name="desc_empty_cart_text1">장바구니가 비어있어요!</string>
    <string name="desc_empty_cart_text2">다양한 메뉴가 준비되어 있습니다. :)</string>
    <string name="btn_select_cafe_menu">메뉴 고르기</string>
    <string name="btn_delete">삭제</string>

    <string name="cafe_menu_amount">수량</string>
    <string name="cafe_menu_option">추가옵션</string>

    <string name="btn_whippingcream_normal">기본</string>
    <string name="btn_whippingcream_remove">없음</string>
    <string name="btn_add_cart">장바구니 담기</string>
    <string name="btn_order_now">바로 주문하기</string>
    <string name="btn_order">주문하기</string>

    <string name="text_order_cafe_menu">주문 메뉴</string>
    <string name="text_use_coupon">쿠폰 사용</string>
    <string name="text_eat_option">옵션</string>
    <string name="text_how_to_pay">결제 방법</string>
    <string name="text_order_notice">유의사항</string>

    <string name="desc_notice_text1">1. 어쩌고 저쩌고</string>
    <string name="desc_notice_text2">2. 이러쿵 저러쿵</string>
    <string name="desc_notice_text3">3. 그러므로 잘 살펴보고 이용하도록 하자. 우리는 책임지지 않겠다.</string>

    <string name="btn_for_here">매장에서 취식</string>
    <string name="btn_to_go">포장 주문</string>
    <string name="btn_credit_card">신용카드</string>
    <string name="btn_easy_pay">간편페이</string>
    <string name="btn_bank_transfer">계좌이체</string>
    <string name="btn_payment">결제하기</string>

    <string name="text_order_standby">주문대기</string>
    <string name="text_order_receipt">주문접수</string>
    <string name="text_pickup_wait">픽업대기</string>
    <string name="text_pickup_finish">픽업완료</string>

    <string name="desc_waiting_order">주문이 접수중입니다.</string>
    <string name="desc_receive_order">음료를 준비중입니다.</string>
    <string name="desc_waiting_pickup">음료가 준비되었습니다! \n픽업해주세요.</string>
    <string name="desc_finish_pickup">픽업이 완료되었습니다. \n맛있게 드세요.</string>

    <string name="text_coupon_is_used">사용완료</string>
    <string name="text_coupon_date_expiry">기간만료</string>

    <string name="text_chatting_not_enable">현재 채팅이 불가합니다.</string>

    <string name="text_permission_request">권한 사용을 거부하였습니다. 기능 사용을 원하실 경우 휴대폰설정 > 애플리케이션 관리자에서 해당 앱의 권한을 허용해주세요.</string>
    <string name="btn_positive_permission_request">설정하러 가기</string>
    <string name="btn_negative_permission_request">닫기</string>

    <string name="text_select_image">사진 선택</string>

    <string-array name="array_cafe_menu">
        <item>신메뉴</item>
        <item>커피(hot)</item>
        <item>커피(ice)</item>
        <item>프라푸치노</item>
        <item>음료</item>
        <item>디저트</item>
    </string-array>

</resources>