<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basicBackground">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/app_logo_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldUserID"
        style="@style/OutlinedRoundBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/user_id"
        app:boxStrokeWidthFocused="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        app:startIconContentDescription="@string/desc_id_icon"
        app:startIconDrawable="@drawable/ic_user_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUserID"
            android:paddingStart="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            app:fontFamily="sans-serif"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldUserPwd"
        style="@style/OutlinedRoundBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/user_pwd"
        app:endIconMode="password_toggle"
        app:boxStrokeWidthFocused="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldUserID"
        app:startIconContentDescription="@string/desc_pwd_icon"
        app:startIconDrawable="@drawable/ic_user_pwd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUserPwd"
            android:paddingStart="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:fontFamily="sans-serif"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:paddingVertical="8dp"
        android:text="@string/login"
        android:textSize="24dp"
        android:textStyle="bold"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldUserPwd" />

    <Button
        android:id="@+id/btnFindUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/find_user_info"
        android:textColor="#8C8C8C" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindUserInfo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/sign_up"
        android:textColor="#8C8C8C" />

    <Button
        android:id="@+id/btnGoogleLogin"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:backgroundTint="@color/white"
        app:icon="@drawable/logo_google"
        app:iconTint="@null"
        android:text="구글로 로그인하기"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnFacebookLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginHorizontal="64dp"
        app:backgroundTint="#1877F2"
        app:icon="@drawable/logo_facebook"
        app:iconTint="@null"
        android:text="페이스북으로 로그인하기"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/social_login"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminateDrawable="@drawable/custom_progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>